# spell-checker

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: codecov.yml  pylint.yml
data/: finnish_words_kotus.txt  license.txt
docs/: maarittelydokumentti.md  testausraportti.md  toteutusdokumentti.md
docs/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md
src/spell_checker/: app.py  damerau_levenshtein.py  suggestions.py  trie.py
src/spell_checker/static/: spellcheck.js  styles.css
src/spell_checker/templates/: index.html
tests/: test_damerau_levenshtein.py  test_performance.py  test_suggestions.py  test_trie.py
