[project]
name = "spell-checker"
version = "0.1.0"
description = ""
authors = [
    {name = "Marike",email = "marike.puranen@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]

packages = [{include = "spell_checker", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.13.5,<8.0.0)",
    "pylint (>=4.0.5,<5.0.0)"
]
